// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-MEQRl bASaEp"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-MEQRl bASaEp"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-MEQRl bASaEp"
>
  <span
    className="sc-hkWWFD hwhYa-D"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-MEQRl bASaEp"
>
  <div
    className="sc-khrHlC fbykVz"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-MEQRl bASaEp"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-MEQRl dnJazb"
  size="small"
/>
`;
